--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proshop",
+  "name": "Gaurang",
   "version": "1.0.0",
   "description": "MERN shopping cart app",
   "main": "server.js",
